[gd_scene load_steps=18 format=3 uid="uid://6xbcwwfq6akg"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_a7pg0"]
[ext_resource type="Texture2D" uid="uid://dhmkyvsicu75s" path="res://Images/AdButton.PNG" id="1_xx6s1"]
[ext_resource type="PackedScene" uid="uid://dufp81p6axnj5" path="res://Scenes/resource_manager.tscn" id="2_bgqnf"]
[ext_resource type="PackedScene" uid="uid://cy2u8obe4qi3h" path="res://Scenes/clock.tscn" id="2_utcoh"]
[ext_resource type="Theme" uid="uid://ciwjhkhg3j0no" path="res://Themes/BigLabelTheme.tres" id="2_wivlq"]
[ext_resource type="Theme" uid="uid://dod4khpgtu50m" path="res://Themes/BigButtonTheme.tres" id="2_ws0mi"]
[ext_resource type="PackedScene" uid="uid://0n5njq3ts32o" path="res://Scenes/pearl_generator.tscn" id="3_xw5rk"]
[ext_resource type="PackedScene" uid="uid://jd25j2y70xms" path="res://Scenes/BuyBuildingsMenu.tscn" id="8_j3dm6"]
[ext_resource type="PackedScene" uid="uid://clrabnq440uda" path="res://Scenes/pop_up.tscn" id="8_lt4c8"]
[ext_resource type="Texture2D" uid="uid://2ta5q2dfglnc" path="res://Images/—Pngtree—arrow shape red simple direction_8186748.png" id="9_32c26"]

[sub_resource type="Theme" id="Theme_raoxt"]
Label/font_sizes/font_size = 64

[sub_resource type="Animation" id="Animation_y8fpn"]
resource_name = "BuildMenuHighlightPowergen"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RedArrow1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(531, 1641), Vector2(531, 1569), Vector2(531, 1641)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RedArrow1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RedArrow1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.57079]
}

[sub_resource type="Animation" id="Animation_hvmsi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RedArrow1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4d1cw"]
resource_name = "DIPowerGenHighlight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RedArrow1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2005, 954)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RedArrow1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.57079]
}

[sub_resource type="Animation" id="Animation_at8oq"]
resource_name = "DIPearlFarmHighlight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RedArrow1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1475, 941)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RedArrow1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.57079]
}

[sub_resource type="Animation" id="Animation_6fnf5"]
resource_name = "DIHousingHighlight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RedArrow1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1784, 1746)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RedArrow1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lxfye"]
_data = {
"BuildMenuHighlightPowergen": SubResource("Animation_y8fpn"),
"DIHousingHighlight": SubResource("Animation_6fnf5"),
"DIPearlFarmHighlight": SubResource("Animation_at8oq"),
"DIPowerGenHighlight": SubResource("Animation_4d1cw"),
"RESET": SubResource("Animation_hvmsi")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_a7pg0")

[node name="Resources" type="Node" parent="."]

[node name="ResourceManager" parent="Resources" instance=ExtResource("2_bgqnf")]

[node name="Clock" parent="." instance=ExtResource("2_utcoh")]

[node name="PearlGenerator" parent="." instance=ExtResource("3_xw5rk")]

[node name="MenuButton" type="Button" parent="."]
offset_left = 781.0
offset_top = 124.0
offset_right = 851.0
offset_bottom = 155.0
scale = Vector2(3.73883, 3.47116)
text = "Menu
"

[node name="AdBreakButton" type="Button" parent="."]
offset_left = 781.0
offset_top = 274.0
offset_right = 851.0
offset_bottom = 305.0
scale = Vector2(3.69544, 3.45797)
theme = SubResource("Theme_raoxt")
text = "
"
icon = ExtResource("1_xx6s1")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -7.0
offset_bottom = 31.0

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 12.0
offset_top = 1885.0
offset_right = 1060.0
offset_bottom = 2097.0

[node name="BuyBuildingsButton" type="Button" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_ws0mi")
text = "Build"

[node name="PearlsButt" type="Button" parent="."]
offset_left = 248.0
offset_top = 767.0
offset_right = 694.0
offset_bottom = 912.0
theme = ExtResource("2_ws0mi")
text = "+5 Pearls"

[node name="PowerButt" type="Button" parent="."]
offset_left = 245.0
offset_top = 964.0
offset_right = 691.0
offset_bottom = 1109.0
theme = ExtResource("2_ws0mi")
text = "+1 Power"

[node name="PeopleButt" type="Button" parent="."]
offset_left = 243.0
offset_top = 1154.0
offset_right = 689.0
offset_bottom = 1299.0
theme = ExtResource("2_ws0mi")
text = "+1 People"

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
anchor_mode = 0
position_smoothing_enabled = true
drag_horizontal_enabled = true

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
offset_left = 49.0
offset_top = 80.0
offset_right = 734.0
offset_bottom = 270.0
color = Color(0.419608, 0.419608, 0.419608, 1)

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 4.0
offset_right = -38.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Camera2D/ColorRect/MarginContainer"]
layout_mode = 2
columns = 3

[node name="_Pearls_" type="Label" parent="Camera2D/ColorRect/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_wivlq")
text = " Pearls"

[node name="_Power_" type="Label" parent="Camera2D/ColorRect/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_wivlq")
text = " Power
"

[node name="_People_" type="Label" parent="Camera2D/ColorRect/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_wivlq")
text = " People
"

[node name="PearlsAmountLabel" type="Label" parent="Camera2D/ColorRect/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_wivlq")
text = "o"

[node name="PowerAmountLabel" type="Label" parent="Camera2D/ColorRect/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_wivlq")
text = "o"

[node name="PeopleAmountLabel" type="Label" parent="Camera2D/ColorRect/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_wivlq")
text = "o"

[node name="PopUp" parent="Camera2D" instance=ExtResource("8_lt4c8")]
z_index = 2

[node name="Control" parent="." instance=ExtResource("8_j3dm6")]
offset_left = 1199.0
offset_top = 86.0
offset_right = 1199.0
offset_bottom = 86.0

[node name="RedArrow1" type="Sprite2D" parent="."]
position = Vector2(1784, 1746)
rotation = -3.14159
scale = Vector2(0.214815, 0.214815)
texture = ExtResource("9_32c26")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_lxfye")
}
autoplay = "BuildMenuHighlightPowergen"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/BuyBuildingsButton" to="." method="_on_buy_buildings_button_pressed"]
[connection signal="pressed" from="PearlsButt" to="." method="_on_pearls_butt_pressed"]
[connection signal="pressed" from="PowerButt" to="." method="_on_power_butt_pressed"]
[connection signal="pressed" from="PeopleButt" to="." method="_on_people_butt_pressed"]
